updated front end with metrics and info

--- a/companion-app/.eslintrc.json
+++ b/companion-app/.eslintrc.json
@@ -6,7 +6,9 @@
       ],
       "files": ["*.ts", "*.tsx"],
       "parserOptions": {
-        "project": "tsconfig.json"
+        "project": "tsconfig.json",
+        "tsconfigRootDir": "./companion-app",
+        "sourceType": "module"
       }
     }
   ],
